kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientjar
  labels:
    app: clientjar
spec:
  ports:
  - port: 86
    protocol: TCP
    targetPort: 8090
  selector:
    app: clientjar
  type: ClusterIP
